# Agentic_Security_Remediation_Pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: arch_blackboard.yaml  arch_blackboard_bedrock.yaml  arch_hub_spoke.yaml  arch_hub_spoke_bedrock.yaml  arch_sequential.yaml  arch_sequential_bedrock.yaml  default.yaml
data/benchmark/dev/: BENCH-0001.json  BENCH-0002.json  BENCH-0003.json  BENCH-0004.json  BENCH-0005.json  BENCH-0006.json  BENCH-0007.json  BENCH-0008.json  (+94 more)
docs/: ADDING_AGENTS.md  ARCHITECTURE.md  BENCHMARK.md  CONFIGURATION.md  demo_script.md  writeup.md
multi_agent_security.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: compare_architectures.sh  curate_dataset.py  generate_comparison.py  generate_failure_report.py  generate_figures.py  generate_mock_data.py  reproduce.sh  run_ablations.py  run_eval.py  run_full_benchmark.py  run_pipeline.py  test_eval_bedrock.py  validate_dataset.py
src/: config.py  llm_client.py
src/agents/: base.py  patcher.py  reviewer.py  scanner.py  triager.py
src/memory/: base.py  full_context.py  retrieval.py  sliding_window.py
src/multi_agent_security/: config.py  llm_client.py  types.py
src/orchestration/: base.py  blackboard.py  hub_spoke.py  sequential.py
src/utils/: cost_tracker.py  logging.py
tests/: conftest.py  test_ablations.py  test_blackboard.py  test_comparison.py  test_config.py  test_dataset_curation.py  test_failure_analysis.py  test_hub_spoke.py  test_judge.py  test_llm_client.py  test_memory.py  test_metrics.py  test_observability.py  test_patcher.py  test_reviewer.py  test_scanner.py  test_sequential.py  test_triager.py  test_types.py
(+213 files in other folders)
