[project]
name = "multi-agent-security"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.21",
    "httpx>=0.27",
    "tenacity>=8.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34",
]
viz = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests requiring a real LLM API key (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
